# ByteBrowser

./: .gitignore  README.md  bb  demo.cast  dune  dune-project  file_manager_lib.opam  jump.cast  mac_bb  open_run.cast  previewing.cast  querying.cast  reduce_tree.cast  relative_dirs.cast  tmp  visualize.ml
_build/: .db  .digest-db  log
_build/default/: README.md  jsip_final_project.dune-package  jsip_final_project.install
demos/: cd.cast  collapse.cast  fz.cast  initial_demo.cast  rename_remove.cast  vc.cast
lib/: dune
lib2/minttea/: README.md
src/: completion.txt  dune  file_contents.txt  file_extension_to_color.json  file_extensions_supported.json  file_manager_lib.ml  fuzzy.ml  fuzzy.mli  main.ml  main.mli  matrix.ml  matrix.mli  navigate.ml  navigate.mli  preview.ml  preview.mli  query.ml  query.mli  querying.ml  querying.mli  querying_script.py  state.ml  state.mli  statistics.ml  statistics.mli  styles.ml  styles.mli  summarization_script.py  summary.ml  summary.mli  syntax_highlighting_script.py  vc.ml  visualize.ml  visualize.mli  visualize_helper.ml  visualize_helper.mli
test/: dune
test/navigate/: test_navigate.ml
test/preview/: dune  test_preview.ml
test/visualize/: test_visualize.ml
tests/fuzzy/: dune  test_fuzzy.ml
tests/matrix/: dune  test_matrix.ml
tests/navigate/: dune  test_navigate.ml
tests/preview/: test_preview.ml
tests/query/: dune  test_query.ml
tests/summary/: dune  test_summary.ml
tests/visualize/: dune  test_visualize.ml
tests/visualize_helper/: dune  test_visualize.ml  test_visualize_helper.ml
(+232 files in other folders)
