(lang dune 3.15)

(name file_manager_lib)

(source
 (github itsmichaeltg/jsip-final-project))

(generate_opam_files true)

(authors "Jity, Michael")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
